--- a/vignettes/Session_2_Tidy_spatial_analyses.Rmd
+++ b/vignettes/Session_2_Tidy_spatial_analyses.Rmd
@@ -44,7 +44,7 @@ style="width:100%; height:600px;"
 frameborder="0">
 </iframe>
 
-#### Installation
+### Installation
 
 let's make sure we get the latest packages available on github
 
