--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -31,6 +31,12 @@ knitr::opts_chunk$set(echo = TRUE, cache = FALSE)
 
 - TWITTER/X: https://x.com/LGMartelotto
 
+## Workshop partner: PHYSALIA
+
+```{r, echo=FALSE, out.width="700px"}
+knitr::include_graphics(here("inst/images/physalia-min.png"))
+```
+
 ## Workshop goals and objectives
 
 ### What you will learn
