--- a/vignettes/Session_2_Tidy_spatial_analyses.Rmd
+++ b/vignettes/Session_2_Tidy_spatial_analyses.Rmd
@@ -113,6 +113,9 @@ rownames(spatialCoords(spatial_data)) = colnames(spatial_data) # Bug?
 # Display the object
 spatial_data
 ```
+::: {.note}
+If `ExperimentHub` should not work. The `spatial_data` object from the previous code block can be downloaded from [Zenodo - 10.5281/zenodo.11233385](https://zenodo.org/records/11233385/files/tidySpatialWorkshop2024_spatial_data.rds?download=1)
+:::
 
 ### 1. tidySpatialExperiment package
 
@@ -332,7 +335,6 @@ This capability is powered by `tidygate`. We show how you can visualise your dat
 Let's draw an arbitrary gate interactively
 
 ```{r, eval=FALSE}
-
 spatial_data_gated = 
   spatial_data |> 
   
@@ -724,6 +726,7 @@ spatial_data |>
   ggplot(aes(array_row, array_col)) +
   geom_point(aes(color = spatialLIBD)) +
   facet_wrap(~sample_id) +
+  coord_fixed() +
   theme(legend.position = "none") +
   labs(title = "spatialLIBD regions")
 ```
@@ -754,7 +757,8 @@ spatial_data_filtered |>
   ggplot(aes(subsets_mito_percent, sum_gene)) + 
   geom_point(aes(color = spatialLIBD), size=0.2) +  
   stat_ellipse(aes(group = spatialLIBD), alpha = 0.3) +
-  scale_color_manual(values = libd_layer_colors |> str_remove("ayer")) +
+  scale_color_manual(values = libd_layer_colors |>
+  str_remove("ayer")) +
   scale_y_log10() +
   theme_bw()
 
@@ -768,7 +772,7 @@ Interestingly, if we plot the correlation between these two quantities we observ
 spatial_data_filtered |> 
   ggplot(aes(subsets_mito_percent, sum_gene)) + 
   geom_point(aes(color = spatialLIBD), size=0.2) +  
-  scale_color_manual(values = libd_layer_colors |> str_remove("ayer")) +
+  scale_color_manual(values = libd_layer_colors |>    str_remove("ayer")) +
   geom_smooth(method="lm") + 
   facet_wrap(~spatialLIBD) + 
   scale_y_log10() +
@@ -794,13 +798,25 @@ spatial_data_filtered |>
 As you can appreciate, the relationship between the number of genes, probed Purcell and their mitochondrial prescription abundance it's quite  consistent.
 
 ::: {.note}
-**Excercise 2.3**
+**Excercise 2.3 (assisted)**
 
 To to practice the use of `tidyomics` on spatial data, we propose a few exercises that connect manipulation, calculations and visualisation. These exercises are just meant to be simple use cases that exploit tidy R streamlined language.
 
-We assume that the cells we filtered as non-alive or damaged, characterised by being reached uniquely for mitochondrial, genes, and genes, linked to up ptosis. it is good practice to check these assumption. This exercise aims to estimate what genes are differentially expressed between filtered and unfiltered cells. Then visualise the results
+We assume that the cells we filtered as non-alive or damaged, characterised by being enriched uniquely for mitochondrial, genes, and genes, linked to up apoptosis. It is good practice to check these assumption. This exercise aims to estimate what genes are differentially expressed between filtered and unfiltered cells. Then visualise the results.
 
-Use `tidyomic`s/`tidyverse` tools to label dead cells and perform differential expression within each region. Some of the comments you can use are: `mutate`, `nest`, `aggregate_cells`.
+Use `tidyomic`/`tidyverse` tools to label dead cells and perform differential expression within each region. Some of the comments you can use are: `mutate`, `nest`, `map`, `aggregate_cells`, `tidybulk:::test_differential_abundance`, 
+
+A hist:
+
+- spatial_data |> 
+  mutate(
+    dead = ...
+    
+- Aggregate by sample, dead status, ad annotated region
+
+- `nest` by annotated region
+
+- use `map` to test DE
 :::
 
 ::: {.note}
@@ -811,7 +827,6 @@ Inspired by our audience, let's try to use `tidyomics` to identify potential Amy
 Amyloid plaques are extracellular deposits primarily composed of aggregated amyloid-beta (Aβ) peptides. They are a hallmark of Alzheimer's disease (AD) and are also found in certain other neurodegenerative conditions.
 
 Amyloid plaques can be found in the brains of mice, particularly in transgenic mouse models that are engineered to develop Alzheimer's disease-like pathology. 
-
 Although amyloid plaques themselves are extracellular, the presence and formation of these plaques are associated with specific gene expression changes in the surrounding and involved cells. These gene markers are indicative of the processes that contribute to amyloid plaque formation, as well as the cellular response to these plaques ([Ranman et al., 2021](https://molecularneurodegeneration.biomedcentral.com/articles/10.1186/s13024-021-00465-0).)
 
 ```{r}
@@ -822,12 +837,14 @@ rownames(spatial_data) = rowData(spatial_data)$gene_name
 ```
 
 The excercise includes
-- Join the features
-- Rescaling
-- Summarising signature (sum), `mutate()`
-- Plotting colousing by the signature
 
-# Plotting 
+- Join the features
+
+- Rescaling
+
+- Summarising signature (sum), `mutate()`
+
+- Plotting colousing by the signature
 :::
 
 
